refactor to newest version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,20 @@
 [package]
 name = "cipher-utils"
 version = "0.1.0"
+authors = ["Binhao Qin"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[profile.dev]
-overflow-checks = false
-
 [profile.release]
-strip = "symbols"
 panic = "abort"
-
-[[example]]
-name = "xxtea-cli"
-path = "examples/xxtea-cli/main.rs"
-test = true
-
-[[example]]
-name = "xxtea-cli-bootstrap"
-path = "examples/xxtea-cli/bootstrap.rs"
+strip = true
+lto = true
 
 [dependencies]
+base64 = "0.22.1"
+bytes = "1.6.0"
+clap = { version = "4.5.4", features = ["derive"] }
 cipher = { version = "0.4.4", features = [
   "block-padding",
   "rand_core",
@@ -29,14 +22,9 @@ cipher = { version = "0.4.4", features = [
   "dev",
   "zeroize",
 ] }
-hex = "0.4.3"
-rand = "0.8.5"
-clap = { version = "4.3.12", features = ["derive"] }
-regex = { version = "1.9.1", features = ["use_std"] }
+once_cell = "1.19.0"
+regex = { version = "1.10.4", features = ["use_std"] }
 
-[dev-dependencies]
-byteorder = "1.4.3"
-hex-literal = "0.4.1"
-zeroize = { version = "1.6.0", features = ["zeroize_derive", "derive", "std"] }
-include-crypt = { version = "0.1.1", features = ["compression"] }
-pcbc = { version = "0.1.2", features = ["block-padding", "std", "zeroize"] }
+[features]
+default = ["dev"]
+dev = []
